--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -61,7 +61,7 @@
                     <li class="nav-item btn-sigin"><a class="nav-link btn btn-outline-success btn-sm m-1 "
                             href="{% url 'profile' %}">{{user.username}} <img class="img-fluid  rounded-circle"
                                 style="width: 25px; height:  28px" src="{{user.profile.image.url}}" alt=""> </a> </li>
-                    <li class="nav-item btn-login user-btn  "><a class="nav-link; btn btn-primary btn-sm m-1 "
+                    <li class="nav-item btn-login user-btn  "><a class="nav-link btn btn-primary btn-sm m-1 "
                             href="{% url 'logout' %}"> تسجيل خروج </a></li>
                 </ul>
                 {% else %}
