--- a/blog/templates/blog/latest_comments.html
+++ b/blog/templates/blog/latest_comments.html
@@ -4,6 +4,6 @@
     <a class="text-dark" href="{% url 'detail' comment.post.id %}">{{comment.body|safe|truncatechars:40}}</a>
   </li>
   {% empty %}
-  <li class="latest-comment-item list-group-item">لا يوجد تعليقات !</li>
+  <li class="latest-comment-item list-group-item pr-0">لا يوجد تعليقات !</li>
   {% endfor %}
 </ul>
